# fast-api/openapi.json
@@ -1,14 +1,28 @@
 {
     "openapi": "3.1.0",
     "info": {
-        "title": "FastAPI",
+        "title": "E-commerce API",
+        "description": "This is a simple e-commerce API built with FastAPI",
+        "contact": {
+            "name": "E-commerce API Support",
+            "url": "http://localhost:8000/",
+            "email": "example@gmail.com"
+        },
         "version": "0.1.0"
     },
+    "servers": [
+        {
+            "url": "https://vibranium-api-guard.onrender.com/"
+        }
+    ],
     "paths": {
         "/auth/signup": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "Signup",
-                "description": "This is register API",
+                "description": "This is register APIs",
                 "operationId": "signup_auth_signup_post",
                 "requestBody": {
                     "content": {
@@ -44,7 +58,11 @@
         },
         "/auth/login": {
             "post": {
+                "tags": [
+                    "Authentication"
+                ],
                 "summary": "Login",
+                "description": "This is login API",
                 "operationId": "login_auth_login_post",
                 "requestBody": {
                     "content": {
@@ -58,7 +76,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successful Response",
+                        "description": "User logged in successfully",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -80,6 +98,9 @@
         },
         "/products": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
                 "summary": "Get Products",
                 "operationId": "get_products_products_get",
                 "responses": {
@@ -101,6 +122,7 @@
             },
             "post": {
                 "summary": "Create Product",
+                "description": "This is create product API",
                 "operationId": "create_product_products_post",
                 "requestBody": {
                     "content": {
@@ -113,8 +135,8 @@
                     "required": true
                 },
                 "responses": {
-                    "200": {
-                        "description": "Successful Response",
+                    "201": {
+                        "description": "Product created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -138,7 +160,11 @@
         },
         "/products/{product_id}": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
                 "summary": "Get Product",
+                "description": "This is get product by id API",
                 "operationId": "get_product_products__product_id__get",
                 "parameters": [
                     {
@@ -177,7 +203,11 @@
         },
         "/cart/{uid}": {
             "get": {
+                "tags": [
+                    "Cart"
+                ],
                 "summary": "Get Cart",
+                "description": "This is get cart API",
                 "operationId": "get_cart_cart__uid__get",
                 "parameters": [
                     {
@@ -220,7 +250,11 @@
         },
         "/cart": {
             "post": {
+                "tags": [
+                    "Cart"
+                ],
                 "summary": "Add To Cart",
+                "description": "This is add to cart API",
                 "operationId": "add_to_cart_cart_post",
                 "requestBody": {
                     "content": {
@@ -261,7 +295,11 @@
         },
         "/orders": {
             "get": {
+                "tags": [
+                    "Orders"
+                ],
                 "summary": "Get Orders",
+                "description": "This is get all orders API",
                 "operationId": "get_orders_orders_get",
                 "responses": {
                     "200": {
@@ -270,7 +308,7 @@
                             "application/json": {
                                 "schema": {
                                     "items": {
-                                        "$ref": "#/components/schemas/OrderCreate"
+                                        "$ref": "#/components/schemas/OrderSend"
                                     },
                                     "type": "array",
                                     "title": "Response Get Orders Orders Get"
@@ -286,7 +324,11 @@
                 ]
             },
             "post": {
+                "tags": [
+                    "Orders"
+                ],
                 "summary": "Place Order",
+                "description": "This is place order API",
                 "operationId": "place_order_orders_post",
                 "requestBody": {
                     "content": {
@@ -329,6 +371,9 @@
         },
         "/users/me": {
             "get": {
+                "tags": [
+                    "Users"
+                ],
                 "summary": "Read User Me",
                 "description": "Fetch the authenticated user's details.",
                 "operationId": "read_user_me_users_me_get",
@@ -454,6 +499,24 @@
                     "address"
                 ],
                 "title": "OrderCreate"
+            },
+            "OrderSend": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "title": "Id"
+                    },
+                    "address": {
+                        "type": "string",
+                        "title": "Address"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "id",
+                    "address"
+                ],
+                "title": "OrderSend"
             },
             "ProductCreate": {
                 "properties": {
@@ -581,10 +644,32 @@
                 "flows": {
                     "password": {
                         "scopes": {},
-                        "tokenUrl": "auth/login"
+                        "tokenUrl": "/auth/login"
                     }
                 }
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Authentication",
+            "description": "Operations related to user authentication"
+        },
+        {
+            "name": "Products",
+            "description": "Operations related to products"
+        },
+        {
+            "name": "Cart",
+            "description": "Operations related to the shopping cart"
+        },
+        {
+            "name": "Orders",
+            "description": "Operations related to orders"
+        },
+        {
+            "name": "Users",
+            "description": "Operations related to user management"
+        }
+    ]
 }
